Added a Visualization in the Dashboard using 3djs

--- a/Landing_Page_ITD1/index.html
+++ b/Landing_Page_ITD1/index.html
@@ -49,7 +49,7 @@
 		 margin-top: auto;
 		 margin-bottom: auto;
          height: 300px;
-         width: 400px;
+         width: 600px;
          z-index: 200;
 		 top: 400px;
 		 left: 600px;
@@ -65,7 +65,7 @@
 			text-decoration: none;
 			color: #ff005a;
 			float: left;
-			margin-left: 55px;
+			margin-left: 75px;
 			margin-top: 40px;
 			text-align: left;
 		}
@@ -85,8 +85,9 @@
 		<h1 class="DevNet">DevNet</h2>
 		<h4>by Orah Kittrell</h4>
 	
-		<a href="http://dev-net.azurewebsites.net/">DevNet on Azure</a>
-		<a href="https://github.com/OrahK613/DevNet">DevNet on GitHub</a>
+		<a href="http://dev-net.azurewebsites.net/">DevNet site hosted on Azure</a>
+		<a href="https://github.com/OrahK613/DevNet">Fork DevNet on GitHub</a>
+
 	</div>
 
 </body>
